# JT1078Server

./: CMakeLists.txt  README.md  Server.conf  main.cpp  pcm2aac.aac  xxx.txt
Codec/: Adpcm.cpp  Adpcm.h  G711.cpp  G711.h  G726.cpp  G726.h
Configuration/: CConf.cpp  CConf.h
Dao/: CRedisCluster.cpp  CRedisCluster.h
Flv/: CConverter.cpp  CConverter.h  CSplitter.cpp  CSplitter.h  Flv.cpp  Flv.h
Http/: CHttpContext.cpp  CHttpContext.h  CHttpRequest.cpp  CHttpRequest.h  CHttpResponse.cpp  CHttpResponse.h  CHttpServer.cpp  CHttpServer.h
Server/: CCodec.cpp  CCodec.h  CDecoder.cpp  CDecoder.h  CFFmpeg.h  CRealTimeVideoServer.cpp  CRealTimeVideoServer.h  CRtmpStream.cpp  CRtmpStream.h  CURLManager.cpp  CURLManager.h  Daemon.cpp  Daemon.h  JT1078Header.h  Log.cpp  Log.h
Stream/: CRtmp.cpp  CRtmp.h  Flv.cpp  Flv.h
